# libfirewall

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml
ci/: Dockerfile  Makefile  binaries.sh  glibc.sh  init-build.sh  init-release.sh  init.sh  lint.sh  release.sh  test.sh
src/: allowed_dns_names.rs  allowed_dns_servers.rs  context.rs  lib.rs  log.rs  new_functions.rs  old_functions.rs
