[package]
name = "libfirewall"
version = "0.1.0"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
    "Cargo.lock"
]
homepage = "https://github.com/igankevich/libfirewall/"
repository = "https://github.com/igankevich/libfirewall/"
documentation = "https://github.com/igankevich/libfirewall/"
description = "Regain the control of outgoing traffic in your CI/CD pipelines"
license = "GPL-3.0"
publish = false

[lib]
name = "firewall"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.147"
os_socketaddr = "0.2.5"
regex = "1.9.3"
